700px반응형성공

--- a/product_list.html
+++ b/product_list.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <!-- style -->
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/product_list.css">
 </head>
 <body>
@@ -66,14 +67,14 @@
                     <span>페이스</span>
                     <img src="./images/direction_under.png" alt="">
                 </a>
-                <a href="#" class="eye">
+                <a href="./product_list.html" class="eye">
                     <span>아이</span>
                     <img src="./images/direction_under.png" alt="">
                 </a>
-                <a href="#" class="lip">
+                <a href="./product_list.html" class="lip">
                     <span>립</span>
                     <img src="./images/direction_under.png" alt=""></a>
-                <a href="#">메이크업툴</a>
+                <a href="./product_list.html">메이크업툴</a>
                 <a href="./review.html">리뷰</a>
                 <a href="./qna.html">묻고 답하기</a>
                 <a href="#">아멜리 멤버십 라운지</a>
@@ -198,12 +199,12 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1">
+                                    <a href="#" class="swiper-slide slide1">
                                         <img src="./images/product_list/1.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide slide2">
+                                    </a>
+                                    <a href="#" class="swiper-slide slide2">
                                         <img src="./images/product_list/1_2.png" alt="">
-                                    </div>
+                                    </a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -212,10 +213,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>15%</em> 25,200원</span>
+                                <a href="#" class="discount"><em>15%</em> 25,200원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>컴플리먼트 시리즈 쿠션 SPF50+, PA+++ 보라</h3>
+                            <a href="#">컴플리먼트 시리즈 쿠션 SPF50+, PA+++ 보라</a>
                             <p class="review">평점 4.8 · 리뷰 12,719</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -237,8 +238,8 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"><img src="./images/product_list/2.jpg" alt=""></div>
-                                    <div class="swiper-slide slide2"><img src="./images/product_list/2_2.png" alt=""></div>
+                                    <a href="#" class="swiper-slide slide1"><img src="./images/product_list/2.jpg" alt=""></a>
+                                    <a href="#" class="swiper-slide slide2"><img src="./images/product_list/2_2.png" alt=""></a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -247,10 +248,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>10%</em> 30,600원</span>
+                                <a href="#" class="discount"><em>10%</em> 30,600원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>베이크드파우더 003 밀키 바이올렛</h3>
+                            <a href="#">베이크드파우더 003 밀키 바이올렛</a>
                             <p class="review">평점 4.9 · 리뷰 4,300</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -272,8 +273,8 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"><img src="./images/product_list/3.jpg" alt=""></div>
-                                    <div class="swiper-slide slide2"><img src="./images/product_list/3_2.png" alt=""></div>
+                                    <a href="#" class="swiper-slide slide1"><img src="./images/product_list/3.jpg" alt=""></a>
+                                    <a href="#" class="swiper-slide slide2"><img src="./images/product_list/3_2.jpg" alt=""></a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -282,10 +283,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>10%</em> 18,900원</span>
+                                <a href="#" class="discount"><em>10%</em> 18,900원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>쿨쓰루쓰루 파운데이션 SPF30, PA++ 021 에브리</h3>
+                            <a href="#">쿨쓰루쓰루 파운데이션 SPF30, PA++ 021 에브리</a>
                             <p class="review">평점 4.8 · 리뷰 1,477</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -307,8 +308,8 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"><img src="./images/product_list/4.jpg" alt=""></div>
-                                    <div class="swiper-slide slide2"><img src="./images/product_list/4_2.png" alt=""></div>
+                                    <a href="#" class="swiper-slide slide1"><img src="./images/product_list/4.jpg" alt=""></a>
+                                    <a href="#" class="swiper-slide slide2"><img src="./images/product_list/4_2.png" alt=""></a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -317,10 +318,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>10%</em> 10,800원</span>
+                                <a href="#" class="discount"><em>10%</em> 10,800원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>프리핏인앤아웃컨실러 001 화이트</h3>
+                            <a href="#">프리핏인앤아웃컨실러 001 화이트</a>
                             <p class="review">평점 4.7 · 리뷰 992</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -341,8 +342,8 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"><img src="./images/product_list/5.jpg" alt=""></div>
-                                    <div class="swiper-slide slide2"><img src="./images/product_list/5_2.png" alt=""></div>
+                                    <a href="#" class="swiper-slide slide1"><img src="./images/product_list/5.jpg" alt=""></a>
+                                    <a href="#" class="swiper-slide slide2"><img src="./images/product_list/5_2.png" alt=""></a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -351,10 +352,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>10%</em> 10,800원</span>
+                                <a href="#" class="discount"><em>10%</em> 10,800원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>프리핏앤아웃컨실러 003 베이비</h3>
+                            <a href="#">프리핏앤아웃컨실러 003 베이비</a>
                             <p class="review">평점 4.7 · 리뷰 3,263</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -374,8 +375,8 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"><img src="./images/product_list/6.jpg" alt=""></div>
-                                    <div class="swiper-slide slide2"><img src="./images/product_list/6_2.png" alt=""></div>
+                                    <a href="#" class="swiper-slide slide1"><img src="./images/product_list/6.jpg" alt=""></a>
+                                    <a href="#" class="swiper-slide slide2"><img src="./images/product_list/6_2.png" alt=""></a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -384,10 +385,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>10%</em> 30,600원</span>
+                                <a href="#" class="discount"><em>10%</em> 30,600원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>베이크드파우더 005 스노우화이트</h3>
+                            <a href="#">베이크드파우더 005 스노우화이트</a>
                             <p class="review">평점 4.8 · 리뷰 993</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -409,8 +410,8 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"><img src="./images/product_list/7.jpg" alt=""></div>
-                                    <div class="swiper-slide slide2"><img src="./images/product_list/7_2.png" alt=""></div>
+                                    <a href="#" class="swiper-slide slide1"><img src="./images/product_list/7.jpg" alt=""></a>
+                                    <a href="#" class="swiper-slide slide2"><img src="./images/product_list/7_2.png" alt=""></a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -419,10 +420,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>15%</em> 23,400원</span>
+                                <a href="#" class="discount"><em>15%</em> 23,400원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>톤업 베이스 데일리 쿠션 SPF50+, PA+++ 008 도화</h3>
+                            <a href="#">톤업 베이스 데일리 쿠션 SPF50+, PA+++ 008 도화</a>
                             <p class="review">평점 4.7 · 리뷰 1,926</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -443,8 +444,8 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"><img src="./images/product_list/8.jpg" alt=""></div>
-                                    <div class="swiper-slide slide2"><img src="./images/product_list/8_2.png" alt=""></div>
+                                    <a href="#" class="swiper-slide slide1"><img src="./images/product_list/8.jpg" alt=""></a>
+                                    <a href="#" class="swiper-slide slide2"><img src="./images/product_list/8_2.png" alt=""></a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -453,10 +454,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>15%</em> 18,900원</span>
+                                <a href="#" class="discount"><em>15%</em> 18,900원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>컴플리먼트 시리즈 쿠션 SPF50+, PA+++ 보라</h3>
+                            <a href="#">컴플리먼트 시리즈 쿠션 SPF50+, PA+++ 보라</a>
                             <p class="review">평점 4.5 · 리뷰 4,149</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -476,8 +477,8 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"><img src="./images/product_list/9.jpg" alt=""></div>
-                                    <div class="swiper-slide slide2"><img src="./images/product_list/9_2.png" alt=""></div>
+                                    <a href="#" class="swiper-slide slide1"><img src="./images/product_list/9.jpg" alt=""></a>
+                                    <a href="#" class="swiper-slide slide2"><img src="./images/product_list/9_2.png" alt=""></a>
                                 </div>
                                 <!-- If we need navigation buttons -->
                                 <div class="swiper-button-prev"></div>
@@ -486,10 +487,10 @@
                         </div>
                         <div class="bottom">
                             <div class="price">
-                                <span class="discount"><em>10%</em> 18,900원</span>
+                                <a href="#" class="discount"><em>10%</em> 18,900원</a>
                                 <span class="like"><img src="./images/product_list/like.png" alt=""></span>
                             </div>
-                            <h3>쿨쓰루쓰루 파운데이션 SPF30, PA++ 013 포세린</h3>
+                            <a href="#">쿨쓰루쓰루 파운데이션 SPF30, PA++ 013 포세린</a>
                             <p class="review">평점 4.6 · 리뷰 1,478</p> 
                             <div class="arrival_promise">
                                 <div class="arrival">
@@ -509,61 +510,12 @@
         <!-- page -->
         <section class="page_bg">
             <div class="page">
-                <p>1</p>
+                <a href="#">1</a>
             </div>
         </section>
     </main>
     <!-- footer -->
-    <footer>
-        <div class="contents">
-            <div class="top">
-                <div id="fnb">
-                    <a href="#">공지사항</a>
-                    <a href="#">이용약관</a>
-                    <a href="#"><em>개인정보처리방침</em></a>
-                    <a href="#">영상정보처리방침</a>
-                    <a href="#">고객센터</a>
-                    <a href="#">매장안내</a>
-                </div>
-                <div class="middle">
-                    <select name="global" id="global">
-                        <option value="Global Ameli">Global Ameli</option>
-                        <option value="US">US</option>
-                        <option value="Japan">Japan</option>
-                        <option value="Hong kong">Hong kong</option>
-                        <option value="Iraq">Iraq</option>
-                        <option value="Turkey">Turkey</option>
-                        <option value="Vietnam">Vietnam</option>
-                        <option value="Thailand">Thailand</option>
-                        <option value="Guatemala">Guatemala</option>
-                        <option value="Bangldesh">Bangldesh</option>
-                    </select>
-                    <select name="language" id="language">
-                        <option value="Language">Language</option>
-                        <option value="KOREAN">KOREAN</option>
-                        <option value="ENGLISH">ENGLISH</option>
-                    </select>
-                </div>
-                <div class="right">
-                    <a href="#"><img src="./images/main/youtube.png" alt=""></a>
-                    <a href="#"><img src="./images/main/facebook.png" alt=""></a>
-                    <a href="#"><img src="./images/main/instagram.png" alt=""></a>
-                </div>
-            </div>
-            <div class="bottom">
-                <div class="left">
-                    <p id="address">
-                        상호 (주)아멜리<span></span>대표이사 권유미<span></span>Tel 1533-8835 (02-566-7889)<br>주소 06180 서울특별시 강남구 테헤란로20길 18(역삼동) 부봉빌딩 6층<br>사업자등록번호 487-88-01427<span></span>통신 판매업번호 제2019-서울강남-04775호<span></span>개인정보관리 이한나<br>제휴문의 biz@ameli.co.kr
-                    </p>
-                </div>
-                <div class="right">
-                    <span class="center">고객센터</span>
-                    <span class="number">02-566-7889</span>
-                    <span class="time">평일 09:00 ~ 17:00<br>점심시간 11:30 ~ 12:30</span>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <?php include("./footer.php") ?>
     <script src="./script/product_list.js"></script>
 </body>
 </html>
