--- a/qna.html
+++ b/qna.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="./images/ameli_favicon.ico" type="image/x-icon">
     <!-- style -->
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/qna.css">
 </head>
 <body>
@@ -63,14 +64,14 @@
                     <span>페이스</span>
                     <img src="./images/direction_under.png" alt="">
                 </a>
-                <a href="#" class="eye">
+                <a href="./product_list.html" class="eye">
                     <span>아이</span>
                     <img src="./images/direction_under.png" alt="">
                 </a>
-                <a href="#" class="lip">
+                <a href="./product_list.html" class="lip">
                     <span>립</span>
                     <img src="./images/direction_under.png" alt=""></a>
-                <a href="#">메이크업툴</a>
+                <a href="./product_list.html">메이크업툴</a>
                 <a href="./review.html">리뷰</a>
                 <a href="./qna.html">묻고 답하기</a>
                 <a href="#">아멜리 멤버십 라운지</a>
@@ -119,55 +120,6 @@
         </section>
     </main>
     <!-- footer -->
-    <footer>
-        <div class="contents">
-            <div class="top">
-                <div id="fnb">
-                    <a href="#">공지사항</a>
-                    <a href="#">이용약관</a>
-                    <a href="#"><em>개인정보처리방침</em></a>
-                    <a href="#">영상정보처리방침</a>
-                    <a href="#">고객센터</a>
-                    <a href="#">매장안내</a>
-                </div>
-                <div class="middle">
-                    <select name="global" id="global">
-                        <option value="Global Ameli">Global Ameli</option>
-                        <option value="US">US</option>
-                        <option value="Japan">Japan</option>
-                        <option value="Hong kong">Hong kong</option>
-                        <option value="Iraq">Iraq</option>
-                        <option value="Turkey">Turkey</option>
-                        <option value="Vietnam">Vietnam</option>
-                        <option value="Thailand">Thailand</option>
-                        <option value="Guatemala">Guatemala</option>
-                        <option value="Bangldesh">Bangldesh</option>
-                    </select>
-                    <select name="language" id="language">
-                        <option value="Language">Language</option>
-                        <option value="KOREAN">KOREAN</option>
-                        <option value="ENGLISH">ENGLISH</option>
-                    </select>
-                </div>
-                <div class="right">
-                    <a href="#"><img src="./images/main/youtube.png" alt=""></a>
-                    <a href="#"><img src="./images/main/facebook.png" alt=""></a>
-                    <a href="#"><img src="./images/main/instagram.png" alt=""></a>
-                </div>
-            </div>
-            <div class="bottom">
-                <div class="left">
-                    <p id="address">
-                        상호 (주)아멜리<span></span>대표이사 권유미<span></span>Tel 1533-8835 (02-566-7889)<br>주소 06180 서울특별시 강남구 테헤란로20길 18(역삼동) 부봉빌딩 6층<br>사업자등록번호 487-88-01427<span></span>통신 판매업번호 제2019-서울강남-04775호<span></span>개인정보관리 이한나<br>제휴문의 biz@ameli.co.kr
-                    </p>
-                </div>
-                <div class="right">
-                    <span class="center">고객센터</span>
-                    <span class="number">02-566-7889</span>
-                    <span class="time">평일 09:00 ~ 17:00<br>점심시간 11:30 ~ 12:30</span>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <?php include("./footer.php") ?>
 </body>
 </html>
