반응형드디어성공선생님감사합니다

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
         </section>
     </main>
     <!-- footer -->
+    <!-- footer -->
     <?php include("./footer.php") ?>
     <script src="./script/script.js"></script>
 </body>
